fix: drawer and footer spacing

--- a/hypermedia-amogus/assets/css/main.css
+++ b/hypermedia-amogus/assets/css/main.css
@@ -77,7 +77,3 @@
 .no-rounded-left {
   border-radius: 0 0.75rem 0.75rem 0;
 }
-
-.icon-footer {
-  background-color: #263049;
-}
